--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <h1> My cool website!!!!!!?!?!?!??!?!</h1>
       <p> HTML sucks!!</p>
       <img src="https://www.truxnow.com/hs-fs/hubfs/Standard%20Dump%20Truck.jpg?width=624&height=468&name=Standard%20Dump%20Truck.jpg">
-      <blockquote>"I'm gonna kms -Charlotte Mihaljevic"</blockquote>
+      <blockquote>"crazy -Charlotte Mihaljevic"</blockquote>
       <button onclick="changeQuote()">Change Quote</button>
 
       <script>
@@ -24,12 +24,11 @@
 
         function changeQuote() {
             var quotes = [
-                `"I really hate homophobia!" - Joe Bidan`,
+                `"I really hate homophobia!" - Joe Biden`,
                 `"I'm so tired rn" - Charlotte Mihaljevic`,
-                `"What, you want to express yourself more?" - Steve Mihaljevic`,
-                `"I'm gonna kms -Charlotte Mihaljevic"`
+                `"ugh" - Steve Mihaljevic`,
+                `"why -Charlotte Mihaljevic"`
             ]
-            alert("It's a codeamenominon!!!");
             var blockquote = document.querySelector("blockquote");
             blockquote.innerHTML = quotes[index];
             index++;
